--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,11 +15,12 @@
   filter: brightness(50%);
   object-fit: cover;
   width: 100%;
+  margin-top: 40px;
   max-height: 625px;
 }
 .heroDescription {
   width: 100%;
-  font-size: calc(15px + 0.390625vw);
+
   color: white;
   text-align: center;
   position: absolute;
